// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Select with categories Component 1`] = `
<DocumentFragment>
  <div
    class="select"
  >
    <div
      class="selectShow"
      role="selected"
      tabindex="0"
    >
      all
    </div>
  </div>
</DocumentFragment>
`;

exports[`test Select with sorting Component 1`] = `
<DocumentFragment>
  <div
    class="select"
  >
    <div
      class="selectShow"
      role="selected"
      tabindex="0"
    >
      relevance
    </div>
  </div>
</DocumentFragment>
`;
